Normalize the response of the UploadAvatar api
